metadata-classic/objects/becquerel_routing_profile_definition__x.object
<CustomObject>
    <description>becquerel__routing_profile_definition</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__routing_profile_definition</externalName>
    <fields>
        <fullName>CustomerContact_c__c</fullName>
        <description>CustomerContact__c</description>
        <externalDeveloperName>CustomerContact__c</externalDeveloperName>
        <label>CustomerContact__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_c__c</fullName>
        <description>Version__c</description>
        <externalDeveloperName>Version__c</externalDeveloperName>
        <label>Version__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_available_service_id__c</fullName>
        <description>sav_available_service_id</description>
        <externalDeveloperName>sav_available_service_id</externalDeveloperName>
        <label>sav_available_service_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_notif_phn_phone_number__c</fullName>
        <description>sav_notif_phn_phone_number</description>
        <externalDeveloperName>sav_notif_phn_phone_number</externalDeveloperName>
        <label>sav_notif_phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_phn_phone_number__c</fullName>
        <description>sav_phn_phone_number</description>
        <externalDeveloperName>sav_phn_phone_number</externalDeveloperName>
        <label>sav_phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_email__c</fullName>
        <description>usr_email</description>
        <externalDeveloperName>usr_email</externalDeveloperName>
        <label>usr_email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_phn_phone_number__c</fullName>
        <description>usr_phn_phone_number</description>
        <externalDeveloperName>usr_phn_phone_number</externalDeveloperName>
        <label>usr_phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_user_id__c</fullName>
        <description>usr_user_id</description>
        <externalDeveloperName>usr_user_id</externalDeveloperName>
        <label>usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>becquerel__routing_profile_definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>name__c</columns>
        <columns>usr_user_id__c</columns>
        <columns>sav_available_service_id__c</columns>
        <columns>sav_notif_phn_phone_number__c</columns>
        <columns>sav_phn_phone_number__c</columns>
        <columns>usr_email__c</columns>
        <columns>usr_phn_phone_number__c</columns>
        <columns>CustomerContact_c__c</columns>
        <columns>Version_c__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>becquerel__routing_profile_definition</pluralLabel>
</CustomObject>